Bug 132439 - ENHANCEMENT: Ability to disable Skia Vulkan from safe-mode
Summary: ENHANCEMENT: Ability to disable Skia Vulkan from safe-mode
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.3.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-04-26 18:52 UTC by Telesto
Modified: 2020-05-06 12:26 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot First Launch after profile reset (65.33 KB, image/jpeg)
2020-04-26 18:53 UTC, Telesto
Details
Screenshot after second launch (Start Center without fonts) (155.51 KB, image/jpeg)
2020-04-26 18:59 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-04-26 18:52:12 UTC
Description:
ENHANCEMENT: Ability to disable Skia Vulkan from safe-mode

Steps to Reproduce:
1. Restart in safe-mode
2. No option to disable Skia (especially Vulkan)

Actual Results:
No option to disable vulkn

Expected Results:
Should be possible


Reproducible: Always


User Profile Reset: No



Additional Info:
-
Comment 1 Telesto 2020-04-26 18:53:59 UTC
Created attachment 159966 [details]
Screenshot First Launch after profile reset
Comment 2 Telesto 2020-04-26 18:59:22 UTC
Created attachment 159967 [details]
Screenshot after second launch (Start Center without fonts)

This issue appeared not new; also seen a while ago 5.4/5.3. Harfbuzz? Font life cycle? OpenGL?

OTOH.. I'm still using my out dated, broken drivers...

Failed vulkan call. Error: -3
Failed to create pipeline. Error: -3
Comment 3 Telesto 2020-04-26 19:33:06 UTC
Only a note/ for the record; This attachment 159967 [details] (start center without fonts) happens only with Skia Vulkan and *cleartype* enabled [with my somewhat supported drivers] after the following commit: 

author	Luboš Luňák <l.lunak@collabora.com>	2020-03-16 15:08:11 +0100
committer	Luboš Luňák <l.lunak@collabora.com>	2020-03-18 10:48:19 +0100
commit 271e8c99a2a1e28b7eb9fdc5fe16f8be1e8ee763 (patch)
tree 9235764f08b015ec92716c1f6f1cf777e55ca3cc
parent 2ff6fce634ff173b9eb8a703b7f2f265f6e3ecb1 (diff)
implement text rendering using directly Skia (Windows)
The Windows code needed for Skia text rendering. Like with the X11
code, the font is slightly lighter than with Skia disabled, but
otherwise it seems to work.
And like the X11 code this also requires patching Skia to use
the font we want.

Change-Id: Ib5ba52e4ba51b6523617072b77ed5446e7343f46
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/90582
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>

Everything is OK with Skia Vulkan rendering with cleartype disabled.
Comment 4 V Stuart Foote 2020-04-26 20:52:41 UTC
Confirmed, on Windows 10 with
Version: 7.0.0.0.alpha0+ (x64)
Build ID: fe1cf8656d6963844553993a77ef565fb2fbeda7
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded

The existing disable Hardware Acceleration [1] (wef 5.3 release) provided in the SafeMode does not seem to affect Skia rendering (disabling Vulkan for Raster, nor disabling Skia for GDI).

May need a tweak, or additional control if Skia is isolated.

=-ref-=
https://gerrit.libreoffice.org/c/core/+/30522/
Comment 5 Commit Notification 2020-05-06 12:25:59 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/626ccb3c223b5c9e26875f63a8aa1ab11674cd72

allow disabling Skia's Vulkan use in safe mode (tdf#132439)

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.