allow disabling Skia's Vulkan use in safe mode (tdf#132439)

Change-Id: I2991ace387356f049fba1a730041bbb4c62c876c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/93562
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>